[gd_scene load_steps=7 format=3 uid="uid://dbvy0qfpwgaaf"]

[ext_resource type="Script" path="res://src/gui/Gui.gd" id="1_fglsx"]
[ext_resource type="Script" path="res://src/gui/Lives.gd" id="2_6g6br"]
[ext_resource type="Texture2D" uid="uid://p1k40vxioyni" path="res://assets/textures/Heart_coraz√≥n_soft.png" id="3_pwch5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbjv2"]
bg_color = Color(0.168627, 0.0431373, 0.129412, 0.376471)
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="FontVariation" id="FontVariation_ypd1s"]

[sub_resource type="LabelSettings" id="LabelSettings_nsehn"]
font = SubResource("FontVariation_ypd1s")

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fglsx")

[node name="Lives" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_6g6br")

[node name="Heart" type="TextureRect" parent="Lives"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 640.0
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_pwch5")
stretch_mode = 1

[node name="ScorePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hbjv2")

[node name="ScoreText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 12.0
offset_right = 72.0
offset_bottom = 35.0
text = "Score:"

[node name="ScoreValueText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 82.0
offset_top = 13.0
offset_right = 130.0
offset_bottom = 36.0
text = "0
"
label_settings = SubResource("LabelSettings_nsehn")

[connection signal="life_changed" from="." to="Lives" method="_on_gui_life_changed"]
